frequency: simplify api, add unknown input_type, add unresolvable url test case, worker is robust to errors
